# ChangeLog for dev-ruby/facter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.118 2015/01/28 06:45:53 graaff Exp $

*facter-2.4.0 (28 Jan 2015)

  28 Jan 2015; Hans de Graaff <graaff@gentoo.org> +facter-2.4.0.ebuild:
  Version bump.

  28 Jan 2015; Hans de Graaff <graaff@gentoo.org> -facter-2.0.2.ebuild,
  -facter-2.1.0.ebuild:
  Cleanup.

  08 Jan 2015; Agostino Sarubbo <ago@gentoo.org> facter-2.2.0.ebuild:
  Stable for ppc64, wrt bug #533588

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> facter-2.2.0.ebuild:
  Stable for sparc, wrt bug #533588

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> facter-2.2.0.ebuild:
  Stable for ppc, wrt bug #533588

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> facter-2.2.0.ebuild:
  Stable for x86, wrt bug #533588

  28 Dec 2014; Jeroen Roovers <jer@gentoo.org> facter-2.2.0.ebuild:
  Stable for HPPA (bug #533588).

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> facter-2.2.0.ebuild:
  Stable for amd64, wrt bug #533588

  26 Dec 2014; Hans de Graaff <graaff@gentoo.org> facter-2.0.2.ebuild,
  facter-2.1.0.ebuild, facter-2.2.0.ebuild, facter-2.3.0.ebuild:
  Add missing keywords for ppc and ppc64. It is not clear why these were
  missing and all dependencies are now satisfied.

  26 Dec 2014; Hans de Graaff <graaff@gentoo.org> -facter-1.7.1-r1.ebuild:
  Remove vulnerable version for security bug 514476.

  18 Nov 2014; Manuel Rüger <mrueg@gentoo.org>
  -files/facter-1.6.16-ifconfig-path.patch,
  -files/facter-1.6.17-ifconfig-path.patch:
  Cleanup unused patches.

  11 Nov 2014; Manuel Rüger <mrueg@gentoo.org> facter-1.7.1-r1.ebuild,
  facter-1.7.6.ebuild, facter-2.0.2.ebuild, facter-2.1.0.ebuild,
  facter-2.2.0.ebuild, facter-2.3.0.ebuild:
  Drop jruby target.

*facter-2.3.0 (07 Nov 2014)

  07 Nov 2014; Hans de Graaff <graaff@gentoo.org> +facter-2.3.0.ebuild:
  Version bump. Add ruby21.

*facter-2.2.0 (30 Aug 2014)
