@@ -6,16 +6,28 @@ DIST facter-1.7.6.gem 203776 SHA256 592ab025a91011b80a82cdc1a105a3b84e85d17c6515
 DIST facter-2.2.0.gem 238592 SHA256 1003ebd3f368577a498d5cc8d2b402a4d0403b6a8c5349c561c468d1a9bf859e SHA512 4da0a60a70b7ccbc69027d85cb08338170086edc7dad3b91f1f2450ea77524114ebbc20a54e923aec5b0812b07368f7b0e3fbae2a0cb46fb166a338a2ef9f808 WHIRLPOOL 305ba16196f0bd49f8bb66162aff41a1325ec1feefb9ec244bf99a57e8bda0876faa11cecdca233c844c6d46e75925a7665e42366774b6c96a028b91f24d4368
 DIST facter-2.3.0.gem 233984 SHA256 601f3ed2cdadbcbf7ee10b1269513848fd89b1e3e232580af6ad041a8e4cf9fe SHA512 d7ef09ed730341aa3b1b2adeb89ecd6fa822cd902902c32231af67d0c282e9c0973b81f176bbf89aa610241f48b0f09491b5385abaf07cff99a9d3f9203870ea WHIRLPOOL c21a5d619d424bd11455c8a80d23d2b1739a616ff1c1789f0387900ac19fe0c5d876e5718035d2342b225043526ced37149102c4f7a4e09735e0b64124fc63db
 DIST facter-2.4.0.gem 244224 SHA256 d822eeb894a769091ebfb01cbec5a07e8748c6463fe116adb6f305c60f3fdc7e SHA512 a8f4fc9e22e942e39a8ed1180648d49b69d258b59f018064f1b519327491432e4405bbd067ce3834a14408d11b44cff7f19326c3e2b78cbbee6c799d4da9cb76 WHIRLPOOL 1b13505eb528ca995e904ba4fa4e12fd4198f4f4242034cc417067be98e8ed9c17ff8721532c50b2ba36debc11a6226f0f3dc2df1a5afbfda752a0afe32ec954
+DIST facter-2.4.1.gem 236544 SHA256 4c8836066378d387c0561e4c3574865fa10d85d7474d472b049ecc7d5e4c67fa SHA512 5690f059961ba981d2e174f45ebdbb4e9b75aad3599cbc896f1c3d25f9b12c36500e09be70c36ebf27aed602c22d811604c344c7ccc71ecb200d4aeb78f28a4b WHIRLPOOL 1b6b4079b0449c646e06e9fd868b1de29a61facdacea956b032fbbef94e8c4c85594f50021b3f78a3668c5a0f6d29c448bd97c34fdb8a215de2ee74b164af6fd
 EBUILD facter-1.7.6.ebuild 1224 SHA256 831b51969eaa89b46f7bc00dac057bf216560131cd5fd675cfd0b93aff111826 SHA512 d3558ed169f62b654db27f1a98bbff2078b6dfefb01ecf446c654d05851ef0470daf8f9e09e78e88cbc13e92ac8fbb9098800956b9fa5d1268ddb1956c9aeab6 WHIRLPOOL 97422d794337b840b1f1f2ad0fd1b660ab74285b7f18f0c0fa87f1f34aa090bfa3235dc57d2e6d7f919f93ec3a58f949813036eed7fc66997f002f59a3074e3b
 EBUILD facter-2.2.0.ebuild 1839 SHA256 8e1884f36f42bacbb1f9749047c9a2b6ded6246ce5d7bc650f343f258b62b2db SHA512 2367addd05b408a077506867abb829bb0923f58fda68c90ac4e44b947017cb84466810266c93c5953d933aaa1143832d43985177eb297a959ecedd21034d01c7 WHIRLPOOL 84fbb7cece4909181b9918530ba826163735c59bdf75c833347ca5f314a781f08ad867fed75fb4d31db6373d04353241eeb9ede77c5dcf189032b409f0d78e6f
 EBUILD facter-2.3.0.ebuild 2134 SHA256 cd269fcf367f198750d52e5235fdac2c5fd28a89f3c905fcd4a6dae86654a6e9 SHA512 791e1cce618e618f2c8ba3e044fb86d1c2034f862b5b3a4f0fb1be74496f411fcf3397623d88e0d8f485df75b210274c3f379a526ffa25a8e837d4f9f0369f21 WHIRLPOOL 76f71d089f40aa578dc6482635530de6a94383dc6c260e3de294b37f78541ae6c67724a7fcaa57cdf3d5bd0b69c435ba49690d1a0c1fee416dc1880a2d9844b0
 EBUILD facter-2.4.0.ebuild 2021 SHA256 abf9b39dfa516792f1e74ad6911768c01b4e7c60bc31e7ae07d5cf7cd2190f4d SHA512 a2e4e563942d0aebe7531340529a991a22b6dc4f9805ec8490fc160a47fa1a40bdc2d2466d403cf261be956a50fd9f418580606234e8abf10467afdba17d390f WHIRLPOOL 0c957ff71431ecaf3e21ccc7dec0a2f4006d0695d80a0bc3806b83bd0bad8821dcc4faa62f512b8b629b13805ad5b7e5be3c4ef70d3450db347e5c222fa5920d
-MISC ChangeLog 16459 SHA256 101cb26f2005ca078652c512c11e26ac052138f965ed57dd9cb1678fcbbd2815 SHA512 670fc13dd43d65bc6e82709e7305f0dd5b7633bb2f2abf1d80aedbf435faeef5d6998219f9eaebf8b8719facf97198788c77b0ff8b8b474b7a770f49dddd99b3 WHIRLPOOL 901718d9628851f98a4beaea32548a5953d7422e53a163ec30390bc8b25e823c7eb68f75b6173a3be001ec04e0bdd65de83628d87b4456d8dcd1aa349c461712
+EBUILD facter-2.4.1.ebuild 2029 SHA256 0a2606d0d9ac6bb1305d5e0de7c69141b525a11177262812e63f4662eeca6e4f SHA512 0ec8868a864271e9ea9a7ee9f099d3d14cfd1ebe1e1547a5a2c0af00f0701269dab1be0ae3850aa6c90ad17240ddc230df15110bddd25e33e749afcd8dfede99 WHIRLPOOL 8c68aa67226f2b9b44fbd34e5872c46942ff5fdccd8a3f24cbbdd9870e5edc0f637c7a3f62e1b762ba5dad71b45d19066bba163d9fb1d9d51995c8b5c6542ad2
+MISC ChangeLog 16582 SHA256 b34b6b74282bbcc7156c0fdf5202f182556fd1a5d8fe0e15c4685b88a1d493f1 SHA512 ac2413361af1e26a742b7255d0f96d67a258463042281e413ab3107089e53b0c32f9cc2bc54d3c77eb28203fda36199fabb39b640a2db5c3032304dcd90bdb10 WHIRLPOOL a2b02b29ea8f8ace558665959cd99859c82c9bda9af426b6484bb9ef2299a8009476f87b4d5b85dbc42f5bf04704f47ba501329696f01386ba791cd9c68242c1
 MISC metadata.xml 568 SHA256 42e1960b3fa66b2bdbc939c389c59eca3c00736b3f88e8aefa4ffb85fdab8685 SHA512 92bc2c3743019e44faea40dd4dba228cabd7945c98bd07e8c5465347928a37e9e12fff8d84db5480fecdc8d8e29f84a5765b0baebaab6b00d4a4246a6968dca5 WHIRLPOOL e00bdad66ad8a155d9f071c551ac093641fb7f51646d2e20ca0baf357ffd2e4cd86f1774764d143432f92f4a7296a7ddddd96e3205b4b5cfdb4babb58ab5109f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTIhaIACgkQiIP6VqMIqNdYSgD9Fm20H7n7bKmQ0EtUobZew9x9
-ZF6Ud5HEgr1+e/CdDTMA/j+/RXXu4QJC98tJFuHqJswUB9oD8szlrxSsYlpFdkI6
-=Pdyx
+iQIcBAEBCAAGBQJU2wo4AAoJEGSje+quGaTo3F0P/0CX0akKZ1uNbVkKbjIm+bg+
+c1kbZDGrLDa5s23whnuO4TZaMAByQeowc6aEvQYjTE3KGxeslJixOE8yVBV4vp0R
+Hn/Ac2DjbLkQiqFowRzAPWsK2Hog1CP7RjeoB8cefe/7JUrsUOJUxjje7bg9Ht9G
+AsQDBfwTBxB3QIlfp8f8vWU+zcPA9xgMvflcd/C8ZZNP7Rom5VRQ0MHcqOJnb3rB
+lvyiR5A4gEYeQObzANPxB9VGf5dsTZor6J3ZXe7LeMJGopOclIC0ARAaMOHnU9sN
+mg6cfe5CXpep7Km0g6xMb20IvS0231SYM521rTVODN/fWegk4XXrmeruXJl3zFH0
+Hhy/ZbFhlJe++zjUIRY7QS5J9A0FdCjxHp1mMNhkTj27RR8/O3acAtCY16A3REhk
+OMNJBFizpy40TR+d65uNRptJU+HGajvfnTL/crcKmx/9/ibZ85txocF+3rKpLXST
+qbpwxl//QJPUfJq1QjaB39lD/kZ7DZuha8N4Ev6ADQybR88ENDXoVkwCCsB6evBd
+noXVJZnmKtuCSbWvFNn7URaM7oP78Mtkd6R/m88WA60tVJjgUOgDSifdacnlFoC8
+2xCqPXTr22GmpIgZF7Z8m34e+gojhdhPjsLBZj6QMbJ2hei4IH42ddlEpNtDQqm2
+HAmC4iUNBe5HLnNxkRj8
+=bHqt
 -----END PGP SIGNATURE-----
