@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.04.ebuild,v 1.1 2015/02/05 11:10:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.10.5.ebuild,v 1.1 2015/02/11 07:34:05 jer Exp $
 
 EAPI=5
 
