@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.452 2015/02/07 09:07:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.453 2015/02/11 07:34:05 jer Exp $
+
+*youtube-dl-2015.02.10.5 (11 Feb 2015)
+
+  11 Feb 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.04.ebuild,
+  +youtube-dl-2015.02.10.5.ebuild:
+  Version bump.
 
 *youtube-dl-2015.02.06 (07 Feb 2015)
 
