@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/facter
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.118 2015/01/28 06:45:53 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.119 2015/02/11 07:51:54 prometheanfire Exp $
+
+*facter-2.4.1 (11 Feb 2015)
+
+  11 Feb 2015; Matthew Thode <prometheanfire@gentoo.org> +facter-2.4.1.ebuild:
+  bup
 
 *facter-2.4.0 (28 Jan 2015)
 
